fix automatic tests